--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-discord.py==2.3.2
-python-dotenv==1.0.0
-requests==2.31.0
-pandas
-numpy
-matplotlib
-scikit-learn
+flask==2.2.3
+requests==2.28.2
+pandas==1.5.3
+numpy==1.24.2
+matplotlib==3.7.1
+schedule==1.1.0
+gunicorn==20.1.0
